Fix dynamic height shift on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -7,17 +7,21 @@ html {
   background-color: #1e1a20;
 }
 
-.webgl {
+.webgl-container {
+  height: 100lvh;
+  width: 100vw;
   position: fixed;
-  top: 0;
-  left: 0;
+}
+
+.webgl {
+  position: absolute;
   outline: none;
 }
 
 .section {
   display: flex;
   align-items: center;
-  height: 100dvh;
+  height: 100lvh;
   position: relative;
   font-family: 'Cabin', sans-serif;
   color: #ffeded;
